--- a/TeamProject/bin/view/View.fxml
+++ b/TeamProject/bin/view/View.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
+
 <AnchorPane prefHeight="465.0" prefWidth="656.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
       <MenuBar layoutX="3.0" layoutY="-1.0" prefHeight="29.0" prefWidth="656.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -92,11 +93,14 @@
             <Insets />
          </opaqueInsets>
       </MenuBar>
-      <TableView fx:id="textArea" layoutX="75.0" layoutY="99.0" prefHeight="326.0" prefWidth="540.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="100.0">
+      <TableView fx:id="tableArea" editable="true" layoutX="75.0" layoutY="99.0" prefHeight="326.0" prefWidth="540.0" stylesheets="@/view/theme.css" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="100.0">
          <columns>
-            <TableColumn fx:id="textArea_L" maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="270.0" resizable="false" sortable="false" text="Untitled" />
-            <TableColumn fx:id="textArea_R" maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="270.0" resizable="false" sortable="false" text="Untitled" />
+            <TableColumn fx:id="tableArea_L" editable="false" minWidth="270.0" onEditCommit="#set_L" prefWidth="270.0" sortable="false" text="Untitled" />
+            <TableColumn fx:id="tableArea_R" editable="false" minWidth="270.0" onEditCommit="#set_R" prefWidth="270.0" sortable="false" text="Untitled" />
          </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
       <ImageView fx:id="btnSave_R" fitHeight="30.0" fitWidth="30.0" layoutX="571.0" layoutY="70.0" onMouseClicked="#save_R" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="70.0">
          <cursor>
@@ -106,7 +110,7 @@
             <Image url="@/view/Images/SaveRightFile.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnOpen_R" fitHeight="30.0" fitWidth="30.0" layoutX="520.0" layoutY="70.0" onMouseClicked="#open_R" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="111.5670108795166" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnOpen_R" fitHeight="25.8" fitWidth="30.0" layoutX="520.0" layoutY="70.0" onMouseClicked="#open_R" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="111.5670108795166" AnchorPane.topAnchor="72.1">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -122,7 +126,7 @@
             <Image url="@/view/Images/Edit.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnOpen_L" fitHeight="30.0" fitWidth="30.0" layoutX="108.0" layoutY="70.0" onMouseClicked="#open_L" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnOpen_L" fitHeight="25.8" fitWidth="30.0" layoutX="108.0" layoutY="70.0" onMouseClicked="#open_L" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="72.1">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -138,7 +142,7 @@
             <Image url="@/view/Images/SaveLeftFile.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnEdit_R" fitHeight="30.0" fitWidth="30.0" layoutX="470.0" layoutY="70.0" onMouseClicked="#edit_R" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="161.5670108795166" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnEdit_R" fitHeight="30.0" fitWidth="30.0" layoutX="469.0" layoutY="70.19999999999999" onMouseClicked="#edit_R" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="70.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -146,7 +150,7 @@
             <Image url="@/view/Images/Edit.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnMergetoL" fitHeight="30.0" fitWidth="30.0" layoutX="420.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="211.5670108795166" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnMergetoL" fitHeight="27.0" fitWidth="30.0" layoutX="420.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="211.5670108795166" AnchorPane.topAnchor="73.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -154,12 +158,28 @@
             <Image url="@/view/Images/MergeToLeft.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnMergetoR" fitHeight="30.0" fitWidth="30.0" layoutX="204.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnMergetoR" fitHeight="27.0" fitWidth="30.0" layoutX="204.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="73.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
          <image>
             <Image url="@/view/Images/MergeToRight.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="btnSaveEdit_L" fitHeight="30.0" fitWidth="30.0" layoutX="60.0" layoutY="70.0" onMouseClicked="#edit_L" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.topAnchor="70.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <image>
+            <Image url="@/view/Images/SaveEdit.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="btnSaveEdit_R" fitHeight="30.0" fitWidth="30.0" layoutX="468.0" layoutY="67.0" onMouseClicked="#edit_R" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.topAnchor="70.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <image>
+            <Image url="@/view/Images/SaveEdit.png" />
          </image>
       </ImageView>
    </children>
