--- a/TeamProject/bin/view/View.fxml
+++ b/TeamProject/bin/view/View.fxml
@@ -64,7 +64,20 @@
                   <MenuItem mnemonicParsing="false" text="Close" />
                </items>
             </Menu>
-            <Menu mnemonicParsing="false" text="Merge">
+            <Menu mnemonicParsing="false" text="Compare">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Compare">
+                     <graphic>
+                        <ImageView fx:id="itemCompare" fitHeight="30.0" fitWidth="30.0" onMouseClicked="#compare" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@/view/Images/Compare.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </MenuItem>
+               </items>
+            </Menu>
+            <Menu fx:id="menuMerge" disable="true" mnemonicParsing="false" text="Merge">
                <items>
                   <MenuItem mnemonicParsing="false" text="Merge to Left">
                      <graphic>
@@ -92,13 +105,17 @@
             <Insets />
          </opaqueInsets>
       </MenuBar>
-      <TableView fx:id="textArea" layoutX="75.0" layoutY="99.0" prefHeight="326.0" prefWidth="540.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="100.0">
+      <TableView fx:id="tableArea" editable="true" layoutX="75.0" layoutY="99.0" prefHeight="326.0" prefWidth="540.0" stylesheets="@/view/theme.css" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="100.0">
          <columns>
-            <TableColumn fx:id="textArea_L" maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="270.0" resizable="false" sortable="false" text="Untitled" />
-            <TableColumn fx:id="textArea_R" maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="270.0" resizable="false" sortable="false" text="Untitled" />
+            <TableColumn fx:id="tableArea_Index" editable="false" maxWidth="50.0" minWidth="30.0" prefWidth="30.0" sortable="false" />
+            <TableColumn fx:id="tableArea_L" editable="false" minWidth="270.0" onEditCommit="#set_L" prefWidth="270.0" sortable="false" text="Untitled" />
+            <TableColumn fx:id="tableArea_R" editable="false" minWidth="270.0" onEditCommit="#set_R" prefWidth="270.0" sortable="false" text="Untitled" />
          </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <ImageView fx:id="btnSave_R" fitHeight="30.0" fitWidth="30.0" layoutX="571.0" layoutY="70.0" onMouseClicked="#save_R" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnSave_R" fitHeight="30.0" fitWidth="30.0" layoutX="593.0" layoutY="70.0" onMouseClicked="#save_R" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="41.067010879516715" AnchorPane.topAnchor="70.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -106,7 +123,7 @@
             <Image url="@/view/Images/SaveRightFile.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnOpen_R" fitHeight="30.0" fitWidth="30.0" layoutX="520.0" layoutY="70.0" onMouseClicked="#open_R" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="111.5670108795166" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnOpen_R" fitHeight="25.8" fitWidth="30.0" layoutX="545.0" layoutY="72.0" onMouseClicked="#open_R" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="92.48762893676769" AnchorPane.topAnchor="72.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -114,7 +131,7 @@
             <Image url="@/view/Images/OpenRightFile.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnEdit_L" fitHeight="30.0" fitWidth="30.0" layoutX="60.0" layoutY="55.0" onMouseClicked="#edit_L" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnEdit_L" fitHeight="30.0" fitWidth="30.0" layoutX="40.0" layoutY="70.0" onMouseClicked="#edit_L" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="70.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -122,7 +139,7 @@
             <Image url="@/view/Images/Edit.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnOpen_L" fitHeight="30.0" fitWidth="30.0" layoutX="108.0" layoutY="70.0" onMouseClicked="#open_L" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnOpen_L" fitHeight="25.8" fitWidth="30.0" layoutX="88.0" layoutY="72.0" onMouseClicked="#open_L" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="72.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -130,7 +147,7 @@
             <Image url="@/view/Images/OpenLeftFile.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnSave_L" fitHeight="30.0" fitWidth="30.0" layoutX="156.0" layoutY="70.0" onMouseClicked="#save_L" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnSave_L" fitHeight="30.0" fitWidth="30.0" layoutX="136.0" layoutY="70.0" onMouseClicked="#save_L" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="70.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -138,7 +155,7 @@
             <Image url="@/view/Images/SaveLeftFile.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnEdit_R" fitHeight="30.0" fitWidth="30.0" layoutX="470.0" layoutY="70.0" onMouseClicked="#edit_R" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="161.5670108795166" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnEdit_R" fitHeight="30.0" fitWidth="30.0" layoutX="489.66597824096675" layoutY="70.19999999999999" onMouseClicked="#edit_R" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="144.80103263855005" AnchorPane.topAnchor="70.19999999999999">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -146,7 +163,7 @@
             <Image url="@/view/Images/Edit.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnMergetoL" fitHeight="30.0" fitWidth="30.0" layoutX="420.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="211.5670108795166" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnMergeto_R" disable="true" fitHeight="27.0" fitWidth="30.0" layoutX="445.0" layoutY="73.0" onMouseClicked="#mergeToLeft" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="191.51030921936047" AnchorPane.topAnchor="73.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -154,7 +171,7 @@
             <Image url="@/view/Images/MergeToLeft.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnMergetoR" fitHeight="30.0" fitWidth="30.0" layoutX="204.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="70.0">
+      <ImageView fx:id="btnMergeto_L" disable="true" fitHeight="27.0" fitWidth="30.0" layoutX="184.0" layoutY="73.0" onMouseClicked="#mergeToRight" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="73.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -162,6 +179,31 @@
             <Image url="@/view/Images/MergeToRight.png" />
          </image>
       </ImageView>
+      <ImageView fx:id="btnSaveEdit_L" fitHeight="30.0" fitWidth="45.0" layoutX="39.0" layoutY="70.0" onMouseClicked="#edit_L" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.topAnchor="70.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <image>
+            <Image url="@/view/Images/SaveEdit.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="btnSaveEdit_R" fitHeight="30.0" fitWidth="45.0" layoutX="489.0" layoutY="70.0" onMouseClicked="#edit_R" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.topAnchor="70.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <image>
+            <Image url="@/view/Images/SaveEdit.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="btnCompare" fitHeight="30.0" fitWidth="30.0" layoutX="313.0" layoutY="29.0" onMouseClicked="#compare" AnchorPane.topAnchor="29.0">
+         <image>
+            <Image url="@/view/Images/Compare.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <TextField fx:id="textField" disable="true" layoutX="246.0" layoutY="29.0" promptText="Merge 열 입력." AnchorPane.leftAnchor="246.0" AnchorPane.rightAnchor="246.0" AnchorPane.topAnchor="70.0" />
    </children>
    <padding>
       <Insets bottom="0.1" left="0.1" right="0.1" top="0.1" />
